test/tests/errors/error-mod-zero.sm
// true
// true
// false
/**/
/**/

program {
    var x: int = 5 % 0;
    output x;
}